[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task Manager is a simple web application that helps users manage their tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.2",
    "django-bootstrap5>=25.1",
    "django-filter>=25.1",
    "gunicorn>=23.0.0",
    "load-dotenv>=0.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "rollbar>=1.3.0",
    "uvicorn>=0.34.2",
    "whitenoise>=6.9.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.8.0",
    "flake8>=7.2.0",
    "ruff>=0.11.6",
]

[build-system]
requires = ["setuptools>=65.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.hatch.build.targets.wheel]
packages = ["task_manager"]